WIP: RCA finishes successfully.